--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -18,7 +18,9 @@
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -428,7 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add SXDS"
+    "### Add SXDS\n",
+    "\n",
+    "This now happens in CFHT merging notebook because CANDELS contains Suprime fluxes which need merging"
    ]
   },
   {
@@ -439,10 +443,10 @@
    },
    "outputs": [],
    "source": [
-    "nb_merge_dist_plot(\n",
-    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "    SkyCoord(sxds['sxds_ra'], sxds['sxds_dec'])\n",
-    ")"
+    "# nb_merge_dist_plot(\n",
+    "#     SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "#     SkyCoord(sxds['sxds_ra'], sxds['sxds_dec'])\n",
+    "# )"
    ]
   },
   {
@@ -471,8 +475,8 @@
    },
    "outputs": [],
    "source": [
-    "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, sxds, \"sxds_ra\", \"sxds_dec\", radius=1.0*u.arcsec)"
+    "# # Given the graph above, we use 0.8 arc-second radius\n",
+    "# master_catalogue = merge_catalogues(master_catalogue, sxds, \"sxds_ra\", \"sxds_dec\", radius=1.0*u.arcsec)"
    ]
   },
   {
