Bug fixing on xmm-lss
join was making multiple columns due to duplicate ids

--- a/dmu1/dmu1_ml_XMM-LSS/2.3_HSC_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.3_HSC_merge.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -635,7 +637,7 @@
    },
    "outputs": [],
    "source": [
-    "suprime_origin.write(\"{}/xmm-lss_suprime_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+    "suprime_origin.write(\"{}/xmm-lss_hsc_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   },
   {
