SPIRE-NEP Cigale input

--- a/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
@@ -68,8 +68,8 @@
     "SUFFIX = find_last_ml_suffix()\n",
     "#SUFFIX = \"_20170718\"\n",
     "\n",
-    "master_catalogue = Table.read(\"{}/master_catalogue_hatlas-sgp_{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "print('Using masterlist ' + \"{}/master_catalogue_hatlas-sgp_{}.fits\".format(OUT_DIR, SUFFIX))"
+    "master_catalogue = Table.read(\"{}/master_catalogue_sgp_{}.fits\".format(OUT_DIR, SUFFIX))\n",
+    "print('Using masterlist ' + \"{}/master_catalogue_sgp_{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   },
   {
