--- a/dmu1/dmu1_ml_XMM-LSS/2.1_CFHT_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_CFHT_merge.ipynb
@@ -599,7 +599,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue.add_column(Column(data=np.arange(len(catalogue)), \n",
+    "master_catalogue.add_column(Column(data=np.arange(len(master_catalogue)), \n",
     "                              name=\"cfht_intid\"))"
    ]
   },
