XMM-LL join fixed

--- a/dmu1/dmu1_ml_SSDF/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_SSDF/1.2_VISTA-VHS.ipynb
@@ -115,10 +115,10 @@
     "        'HPETROMAGERR': \"merr_vista_h\", \n",
     "        'HAPERMAG3': \"m_ap_vista_h\", \n",
     "        'HAPERMAG3ERR': \"merr_ap_vista_h\",        \n",
-    "        'KSPETROMAG': \"m_vista_k\", \n",
-    "        'KSPETROMAGERR': \"merr_vista_k\", \n",
-    "        'KSAPERMAG3': \"m_ap_vista_k\", \n",
-    "        'KSAPERMAG3ERR': \"merr_ap_vista_k\",\n",
+    "        'KSPETROMAG': \"m_vista_ks\", \n",
+    "        'KSPETROMAGERR': \"merr_vista_ks\", \n",
+    "        'KSAPERMAG3': \"m_ap_vista_ks\", \n",
+    "        'KSAPERMAG3ERR': \"merr_ap_vista_ks\",\n",
     "    })\n",
     "\n",
     "\n",
@@ -147,7 +147,7 @@
     "    \"y\": 0.618,\n",
     "    \"j\": 0.937,\n",
     "    \"h\": 1.384,\n",
-    "    \"k\": 1.839\n",
+    "    \"ks\": 1.839\n",
     "}"
    ]
   },
@@ -178,7 +178,10 @@
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan \n",
     "        \n",
     "        # Convert magnitude from Vega to AB\n",
-    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        band = col[-1]\n",
+    "        if band == 's':\n",
+    "            band = 'ks'\n",
+    "        catalogue[col] += vega_to_ab[band]\n",
     "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
@@ -191,19 +194,6 @@
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for col in catalogue.colnames:\n",
-    "    if '_vista_k' in col:\n",
-    "        catalogue.rename_column(col, col.replace('_vista_k', '_vista_ks'))"
    ]
   },
   {
