Undoing galactic correction on VICS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.2_SDSS-S82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.2_SDSS-S82.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -67,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
@@ -90,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -136,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -435,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
@@ -500,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] +=  delta_ra.to(u.deg)\n",
@@ -548,7 +560,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.add_column(\n",
@@ -593,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.write(\"{}/SDSS-S82.fits\".format(OUT_DIR), overwrite=True)"
