--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.1_SDSS-S82-IAC.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.1_SDSS-S82-IAC.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
