Cigale input work on XMM-LSS

--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -45,7 +45,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = '20180130'"
+    "SUFFIX = '20180220'"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "    \n",
     "\n",
     "        # Check that we did not forget any column\n",
-    "        # assert set(columns) == set(merged_table.colnames)\n",
+    "        print( set(columns) - set(merged_table.colnames))\n",
     "    \n",
     "    \n",
     "        merged_table.write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
