--- a/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180129_cigale.fits\")"
+    "SUFFIX = '20180220'\n",
+    "file_list = glob.glob('../../dmu32/dmu32_XMM-LSS/data/tiles/xmm-lss_{}_cigale_*.fits'.format(SUFFIX))"
    ]
   },
   {
@@ -67,12 +68,12 @@
    },
    "outputs": [],
    "source": [
-    "good = {}\n",
-    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
-    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "# good = {}\n",
+    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -90,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -101,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -119,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "# best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -131,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Correction for galactic extinction\n",
-    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+    "#best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
    ]
   },
   {
@@ -144,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Convertion to CIGALE format\n",
-    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+    "#best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
    ]
   },
   {
@@ -164,12 +165,15 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"OmegaCAM u\"]\n",
-    "g_bands = [\"GPC1 g\", \"OmegaCAM g\"]\n",
-    "r_bands = [\"GPC1 r\", \"OmegaCAM r\"]\n",
-    "i_bands = [\"GPC1 i\", \"OmegaCAM i\"]\n",
-    "z_bands = [\"VISTA z\", \"OmegaCAM z\", \"GPC1 z\",]\n",
-    "y_bands = [\"VISTA y\"  \"GPC1 y\", ]\n",
+    "u_bands = [                         \"megacam_u\"]\n",
+    "g_bands = [            \"suprime_g\", \"megacam_g\", \"decam_g\", \"gpc1_g\" ]\n",
+    "r_bands = [            \"suprime_r\", \"megacam_r\", \"decam_r\", \"gpc1_r\" ]\n",
+    "i_bands = [            \"suprime_i\", \"megacam_i\", \"decam_i\", \"gpc1_i\" ]\n",
+    "z_bands = [\"vista_z\",  \"suprime_z\", \"megacam_z\", \"decam_z\", \"gpc1_z\" ]\n",
+    "y_bands = [\"vista_y\",  \"suprime_y\", \"megacam_y\", \"decam_y\", \"gpc1_y\" ]\n",
+    "j_bands = [\"vista_j\",  \"wircam_j\",  \"ukidss_j\"]\n",
+    "h_bands = [\"vista_h\",  \"wircam_h\",  \"ukidss_h\"]\n",
+    "k_bands = [\"vista_ks\", \"wircam_ks\"] #, \"ukidss_k\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -187,12 +191,12 @@
    },
    "outputs": [],
    "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
-    "remove_unneeded_fluxes(r_bands)\n",
-    "remove_unneeded_fluxes(i_bands)\n",
-    "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
+    "# remove_unneeded_fluxes(g_bands)\n",
+    "# remove_unneeded_fluxes(u_bands)\n",
+    "# remove_unneeded_fluxes(r_bands)\n",
+    "# remove_unneeded_fluxes(i_bands)\n",
+    "# remove_unneeded_fluxes(z_bands)\n",
+    "# remove_unneeded_fluxes(y_bands)"
    ]
   },
   {
@@ -221,93 +225,35 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Number of sources with z-spec: {}\".format(len(best_catalogue)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Correction for galactic extinction\n",
-    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Convertion to CIGALE format\n",
-    "os.environ['LOG_LEVEL'] = 'INFO'\n",
-    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "remove_unneeded_fluxes(g_bands)\n",
-    "remove_unneeded_fluxes(u_bands)\n",
-    "remove_unneeded_fluxes(r_bands)\n",
-    "remove_unneeded_fluxes(i_bands)\n",
-    "remove_unneeded_fluxes(z_bands)\n",
-    "remove_unneeded_fluxes(y_bands)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180129.fits\")"
+    "for tile in file_list:\n",
+    "        \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "\n",
+    "    print(\"Number of sources with z-spec in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "    remove_unneeded_fluxes(j_bands)\n",
+    "    remove_unneeded_fluxes(h_bands)\n",
+    "    remove_unneeded_fluxes(k_bands)\n",
+    "\n",
+    "    best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_best_extcor_zspec_{}_{}.fits\")"
    ]
   }
  ],
