Cigale optnir-specz input on XMM-LSS created on Vulcain

--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -45,7 +45,7 @@
     "# to continue and merge the CIGALE results too.\n",
     "FIRST_RUN_FOR_CIGALE = True\n",
     "\n",
-    "SUFFIX = '20180130'"
+    "SUFFIX = '20180220'"
    ]
   },
   {
@@ -346,7 +346,109 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:11: RuntimeWarning: invalid value encountered in less\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n",
+      "{'zspec'}\n"
+     ]
+    }
+   ],
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
     "    \n",
@@ -388,7 +490,7 @@
     "    \n",
     "\n",
     "        # Check that we did not forget any column\n",
-    "        # assert set(columns) == set(merged_table.colnames)\n",
+    "        print( set(columns) - set(merged_table.colnames))\n",
     "    \n",
     "    \n",
     "        merged_table.write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
