--- a/dmu1/dmu1_ml_xFLS/1.3_KPNO-FLS.ipynb
+++ b/dmu1/dmu1_ml_xFLS/1.3_KPNO-FLS.ipynb
@@ -7,7 +7,7 @@
     "# xFLS master catalogue\n",
     "## Preparation of KPNO-FLS data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_KPNO-FLS`.\n",
+    "KPNO-FLS catalogue: the catalogue comes from `dmu0_KPNO-FLS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -36,7 +36,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
