--- a/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
@@ -25,7 +25,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
