XMM-13hr rerun for Cigale input

--- a/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "## II - Merging tables\n",
     "\n",
-    "We first merge the optical catalogues and then add the infrared ones: WFC, DXS, SpARCS, HSC, PS1, SERVS, SWIRE.\n",
+    "We merge UHS and Legacy Survey.\n",
     "\n",
     "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
    ]
@@ -459,9 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
