CDFS-SWIRE Cigale inputs rerun

--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -61,9 +61,9 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "\n",
+    "SUFFIX = '20180205'\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180130.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -359,7 +359,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/CDFS-SWIRE_20180130_cigale.fits\", overwrite=True)"
+    "    merged_table.write(\"data/CDFS-SWIRE_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
