Big fix on DES aperture correction
I was accidentally taking the extended objects making my aperture corrections too high

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_DECAM_merging.ipynb
@@ -25,13 +25,17 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -93,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for col in des.colnames:\n",
@@ -326,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stellarity_columns = [column for column in master_catalogue.colnames\n",
@@ -435,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decam_bands = ['g','r','i','z','y'] # Lowercase naming convention (k is Ks)\n",
