--- a/dmu1/dmu1_ml_XMM-LSS/2.6_DECAM_merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.6_DECAM_merging.ipynb
@@ -25,13 +25,17 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -439,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decam_bands = ['g','r','i','z','y'] # Lowercase naming convention (k is Ks)\n",
