--- a/dmu1/dmu1_ml_SSDF/1.3_DES.ipynb
+++ b/dmu1/dmu1_ml_SSDF/1.3_DES.ipynb
@@ -39,7 +39,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -136,7 +138,7 @@
     "        [orig_des[\"MAG_APER_{}_{}\".format(aperture, band.upper())] for aperture in apertures]\n",
     "    )\n",
     "\n",
-    "    stellarities[band] = 1 - np.array(orig_des[\"CLASS_STAR_{}\".format(band.upper())])\n",
+    "    stellarities[band] = np.array(orig_des[\"CLASS_STAR_{}\".format(band.upper())])\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isclose(magnitudes[band], 99.)\n",
@@ -210,7 +212,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "We will use magnitudes between 18.0 and 21.0"
+    "We will use magnitudes between 15.0 and 16.0"
    ]
   },
   {
@@ -236,7 +238,7 @@
     "mag_corr['g'], num, std = aperture_correction(\n",
     "    orig_des['MAG_APER_4_G'], orig_des['MAG_APER_10_G'], \n",
     "    stellarities['g'],\n",
-    "    mag_min=18.0, mag_max=21.0)\n",
+    "    mag_min=15.0, mag_max=16.0)\n",
     "print(\"Aperture correction for g band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['g']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -307,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.0 and 20.0."
+    "We use magnitudes between 15.0 and 16.0."
    ]
   },
   {
@@ -333,7 +335,7 @@
     "mag_corr['r'], num, std = aperture_correction(\n",
     "    orig_des['MAG_APER_4_R'], orig_des['MAG_APER_10_R'], \n",
     "    stellarities['r'],\n",
-    "    mag_min=17.0, mag_max=20.0)\n",
+    "    mag_min=15.0, mag_max=16.0)\n",
     "print(\"Aperture correction for r band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['r']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -402,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.5 and 20.0."
+    "We use magnitudes between 15.0 and 16.0."
    ]
   },
   {
@@ -428,7 +430,7 @@
     "mag_corr['i'], num, std = aperture_correction(\n",
     "    orig_des['MAG_APER_4_I'], orig_des['MAG_APER_10_I'], \n",
     "    stellarities['i'],\n",
-    "    mag_min=17.5, mag_max=20.0)\n",
+    "    mag_min=15.0, mag_max=16.0)\n",
     "print(\"Aperture correction for i band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['i']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -499,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use magnitudes between 17.5 and 20.0."
+    "We use magnitudes between 15.0 and 16.0."
    ]
   },
   {
@@ -525,7 +527,7 @@
     "mag_corr['z'], num, std = aperture_correction(\n",
     "    orig_des['MAG_APER_4_Z'], orig_des['MAG_APER_10_Z'], \n",
     "    stellarities['z'],\n",
-    "    mag_min=17.5, mag_max=20.0)\n",
+    "    mag_min=15.0, mag_max=16.0)\n",
     "print(\"Aperture correction for z band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['z']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
@@ -596,7 +598,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "We use magnitudes between 17.0 and 19.0."
+    "We use magnitudes between 15.0 and 16.0."
    ]
   },
   {
@@ -622,7 +624,7 @@
     "mag_corr['y'], num, std = aperture_correction(\n",
     "    orig_des['MAG_APER_4_Y'], orig_des['MAG_APER_10_Y'], \n",
     "    stellarities['y'],\n",
-    "    mag_min=17.0, mag_max=19.0)\n",
+    "    mag_min=15.0, mag_max=16.0)\n",
     "print(\"Aperture correction for y band:\")\n",
     "print(\"Correction: {}\".format(mag_corr['y']))\n",
     "print(\"Number of source used: {}\".format(num))\n",
