Removing ul band as it is same as u just list driven

--- a/dmu1/dmu1_ml_SGP/2.1_Omegacam_merge.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.1_Omegacam_merge.ipynb
@@ -466,9 +466,11 @@
    },
    "outputs": [],
    "source": [
+    "#band ul is actually the same as u but measured in a different way. we remove it.\n",
     "for col in master_catalogue.colnames:\n",
     "    if '_atlas_ul' in col:\n",
-    "        master_catalogue[col].name = col.replace('_atlas_ul', '_omegacam_ul')\n",
+    "        master_catalogue.remove_column(col)\n",
+    "        \n",
     "master_catalogue['flag_merged'].name = 'omegacam_flag_merged'"
    ]
   },
