--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -969,7 +969,7 @@
     "    # Check to use catalogue flags from HSC and PanSTARRS.\n",
     "    nb_optical_flux = (\n",
     "        #Omegacam \n",
-    "        1 * ~np.isnan(sub_catalogue['f_omegacam_ul']) +\n",
+    "        #1 * ~np.isnan(sub_catalogue['f_omegacam_ul']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_omegacam_u']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_omegacam_g']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_omegacam_r']) +\n",
