Another DES mask change

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.9_DES.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -699,7 +701,7 @@
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        \n",
     "        # Some objects have -99.0 values\n",
-    "        mask = (np.isclose(catalogue[col], 99.) )\n",
+    "        mask = (catalogue[col] > 50.) | (catalogue[col] < 0.)\n",
     "        catalogue[col][mask] = np.nan\n",
     "        catalogue[errcol][mask] = np.nan\n",
     "        \n",
